# linefit_ground_segmentation

linefit_ground_segmentation_ros/: CMakeLists.txt  package.xml
linefit_ground_segmentation_ros/launch/: segmentation_params.yaml
linefit_ground_segmentation_ros/src/: ground_segmentation_node.cc
